--- a/public_html/index.html
+++ b/public_html/index.html
@@ -91,6 +91,12 @@
 		
 		
 		<div class='socialMedia'>
+
+			<a href="https://www.linkedin.com/in/linna-l-8686557b/"  target = '_blank'><img src='images/linkedin.svg'></a>
+			<a href="https://www.instagram.com/linnali577/"  target = '_blank'><img src='images/instagram.svg'></a>
+			<a href="https://www.facebook.com/linna.li.54/"  target = '_blank'><img src='images/facebook.svg'></a>
+			<a href="mailto:linnali577@gmail.com"  target = '_blank'><img src='images/email.svg'></a>
+			<a href="https://github.com/bumblebee577" target = '_blank'><img src='images/github.svg'></a>
 			
 		
 		</div>
