--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 		</p>
 
 		<span class='social-media-icons'>
-		<a href="https://github.com/leanalee" target = '_blank'><img src='images/github.svg' class="sm-icon"></a>
-		<a href="https://www.linkedin.com/in/leanalee"  target = '_blank'><img src='images/linkedin.svg' class="sm-icon"></a>
-		<a href="https://www.instagram.com/leanalee577"  target = '_blank'><img src='images/instagram.svg' class="sm-icon"></a>
-		<a href="https://www.facebook.com/leanalee577"  target = '_blank'><img src='images/facebook.svg' class="sm-icon"></a>
+		<a href="https://github.com/linnal86" target = '_blank'><img src='images/github.svg' class="sm-icon"></a>
+		<a href="https://www.linkedin.com/in/linnal8686557b/"  target = '_blank'><img src='images/linkedin.svg' class="sm-icon"></a>
+		<a href="https://www.instagram.com/linnal.86/"  target = '_blank'><img src='images/instagram.svg' class="sm-icon"></a>
+		<a href="https://www.facebook.com/linnal.86/"  target = '_blank'><img src='images/facebook.svg' class="sm-icon"></a>
 		<a href="mailto:linnali577@gmail.com"  target = '_blank'><img src='images/email.svg' class="sm-icon"></a>
 		</span>
 	</div>
