updated project links

--- a/index.html
+++ b/index.html
@@ -118,23 +118,22 @@
 					<p>React, NodeJS, Express, MongoDB, Jest </p>
 
 					<ul>
-						<li><a href="#" >Demo Trailer</a></li>
-						<li><a href="#" >Live Demo</a></li>
-						<li><a href="#" >Source Code</a></li>
+						<!-- <li><a href="#" >Demo Trailer</a></li> -->
+						<li><a href="http://tdplaylist.xyz/" >Live Demo</a></li>
+						<li><a href="https://github.com/linnal86/tdplaylist" >Frontend Source Code</a></li>
+						<li><a href="https://github.com/linnal86/tdserver" >Backend Source Code</a></li>
 
 					</ul>
 				</div>
 			
 		
-
-		
 				<div class="folio-item">UTILITY DASHBOARD
 					<p>Web utitlies that includes quote generator, markdown previewer, calculator, and pomodoro timer, expense tracker </p>
 					<p>React, React Hooks</p>
 					<ul>
-						<li><a href="#" >Demo Trailer</a></li>
-						<li><a href="#" >Live Demo</a></li>
-						<li><a href="#" >Source Code</a></li>
+						<!-- <li><a href="#" >Demo Trailer</a></li> -->
+						<!-- <li><a href="#" >Live Demo</a></li> -->
+						<li><a href="https://github.com/linnal86/utilDashboard">Source Code</a></li>
 
 					</ul>
 					
@@ -146,15 +145,15 @@
 					<p>Match game, Frogger, Space Invaders, Tetris</p>
 					<p>Vanilla JS, CSS</p>
 					<ul>
-						<li><a href="#" >Demo Trailer</a></li>
-						<li><a href="#" >Live Demo</a></li>
-						<li><a href="#" >Source Code</a></li>
+						<!-- <li><a href="#" >Demo Trailer</a></li> -->
+						<!-- <li><a href="#" >Live Demo</a></li> -->
+						<li><a href="https://github.com/linnal86/jsArcade" >Source Code</a></li>
 
 					</ul>
 				</div>
 		
 			
-				<div class="folio-item">TEXT VISUALIZATION
+				<!-- <div class="folio-item">TEXT VISUALIZATION
 					<p>Render tree using tries to show freqency of words and letters in books </p>
 					<p>Vanilla JS, CSS, Google Books API</p>
 
@@ -191,7 +190,7 @@
 						<li><a href="#" >Source Code</a></li>
 
 					</ul>
-				</div>
+				</div> -->
 		
 
 		</div>
